@@ -94,17 +94,15 @@ end_import
 
 begin_import
 import|import
-name|org
+name|com
 operator|.
-name|apache
+name|google
 operator|.
-name|hadoop
+name|common
 operator|.
-name|util
+name|base
 operator|.
-name|LightWeightGSet
-operator|.
-name|SetIterator
+name|Preconditions
 import|;
 end_import
 
@@ -826,7 +824,7 @@ comment|// replace block in data-node lists
 for|for
 control|(
 name|int
-name|idx
+name|i
 init|=
 name|currentBlock
 operator|.
@@ -835,14 +833,15 @@ argument_list|()
 operator|-
 literal|1
 init|;
-name|idx
+name|i
 operator|>=
 literal|0
 condition|;
-name|idx
+name|i
 operator|--
 control|)
 block|{
+specifier|final
 name|DatanodeDescriptor
 name|dn
 init|=
@@ -850,16 +849,58 @@ name|currentBlock
 operator|.
 name|getDatanode
 argument_list|(
-name|idx
+name|i
 argument_list|)
 decl_stmt|;
-name|dn
+specifier|final
+name|DatanodeStorageInfo
+name|storage
+init|=
+name|currentBlock
 operator|.
-name|replaceBlock
+name|findStorageInfo
+argument_list|(
+name|dn
+argument_list|)
+decl_stmt|;
+specifier|final
+name|boolean
+name|removed
+init|=
+name|storage
+operator|.
+name|removeBlock
 argument_list|(
 name|currentBlock
+argument_list|)
+decl_stmt|;
+name|Preconditions
+operator|.
+name|checkState
+argument_list|(
+name|removed
 argument_list|,
+literal|"currentBlock not found."
+argument_list|)
+expr_stmt|;
+specifier|final
+name|boolean
+name|added
+init|=
+name|storage
+operator|.
+name|addBlock
+argument_list|(
 name|newBlock
+argument_list|)
+decl_stmt|;
+name|Preconditions
+operator|.
+name|checkState
+argument_list|(
+name|added
+argument_list|,
+literal|"newBlock already exists."
 argument_list|)
 expr_stmt|;
 block|}
