@@ -988,47 +988,6 @@ literal|0
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Add data-node to the block. Add block to the head of the list of blocks    * belonging to the data-node.    */
-DECL|method|addBlock (String storageID, BlockInfo b)
-specifier|public
-name|boolean
-name|addBlock
-parameter_list|(
-name|String
-name|storageID
-parameter_list|,
-name|BlockInfo
-name|b
-parameter_list|)
-block|{
-name|DatanodeStorageInfo
-name|s
-init|=
-name|getStorageInfo
-argument_list|(
-name|storageID
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|s
-operator|!=
-literal|null
-condition|)
-block|{
-return|return
-name|s
-operator|.
-name|addBlock
-argument_list|(
-name|b
-argument_list|)
-return|;
-block|}
-return|return
-literal|false
-return|;
-block|}
 annotation|@
 name|VisibleForTesting
 DECL|method|getStorageInfo (String storageID)
@@ -1206,8 +1165,9 @@ name|BlockInfo
 name|b
 parameter_list|)
 block|{
-name|int
-name|index
+specifier|final
+name|DatanodeStorageInfo
+name|s
 init|=
 name|b
 operator|.
@@ -1217,23 +1177,6 @@ name|this
 argument_list|)
 decl_stmt|;
 comment|// if block exists on this datanode
-if|if
-condition|(
-name|index
-operator|>=
-literal|0
-condition|)
-block|{
-name|DatanodeStorageInfo
-name|s
-init|=
-name|b
-operator|.
-name|getStorageInfo
-argument_list|(
-name|index
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
 name|s
@@ -1249,7 +1192,6 @@ argument_list|(
 name|b
 argument_list|)
 return|;
-block|}
 block|}
 return|return
 literal|false
@@ -1293,72 +1235,6 @@ return|;
 block|}
 return|return
 literal|false
-return|;
-block|}
-comment|/**    * Replace specified old block with a new one in the DataNodeDescriptor.    *    * @param oldBlock - block to be replaced    * @param newBlock - a replacement block    * @return the new block    */
-DECL|method|replaceBlock (BlockInfo oldBlock, BlockInfo newBlock)
-specifier|public
-name|BlockInfo
-name|replaceBlock
-parameter_list|(
-name|BlockInfo
-name|oldBlock
-parameter_list|,
-name|BlockInfo
-name|newBlock
-parameter_list|)
-block|{
-name|int
-name|index
-init|=
-name|oldBlock
-operator|.
-name|findStorageInfo
-argument_list|(
-name|this
-argument_list|)
-decl_stmt|;
-name|DatanodeStorageInfo
-name|s
-init|=
-name|oldBlock
-operator|.
-name|getStorageInfo
-argument_list|(
-name|index
-argument_list|)
-decl_stmt|;
-name|boolean
-name|done
-init|=
-name|s
-operator|.
-name|removeBlock
-argument_list|(
-name|oldBlock
-argument_list|)
-decl_stmt|;
-assert|assert
-name|done
-operator|:
-literal|"Old block should belong to the data-node when replacing"
-assert|;
-name|done
-operator|=
-name|s
-operator|.
-name|addBlock
-argument_list|(
-name|newBlock
-argument_list|)
-expr_stmt|;
-assert|assert
-name|done
-operator|:
-literal|"New block should not belong to the data-node when replacing"
-assert|;
-return|return
-name|newBlock
 return|;
 block|}
 DECL|method|resetBlocks ()
