@@ -190,6 +190,26 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|blockmanagement
+operator|.
+name|CorruptReplicasMap
+operator|.
+name|Reason
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|Test
@@ -464,18 +484,16 @@ operator|.
 name|getLocalDatanodeDescriptor
 argument_list|()
 decl_stmt|;
-name|crm
-operator|.
 name|addToCorruptReplicasMap
 argument_list|(
+name|crm
+argument_list|,
 name|getBlock
 argument_list|(
 literal|0
 argument_list|)
 argument_list|,
 name|dn1
-argument_list|,
-literal|"TEST"
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -490,18 +508,16 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|crm
-operator|.
 name|addToCorruptReplicasMap
 argument_list|(
+name|crm
+argument_list|,
 name|getBlock
 argument_list|(
 literal|1
 argument_list|)
 argument_list|,
 name|dn1
-argument_list|,
-literal|"TEST"
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -516,18 +532,16 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|crm
-operator|.
 name|addToCorruptReplicasMap
 argument_list|(
+name|crm
+argument_list|,
 name|getBlock
 argument_list|(
 literal|1
 argument_list|)
 argument_list|,
 name|dn2
-argument_list|,
-literal|"TEST"
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -594,18 +608,16 @@ range|:
 name|block_ids
 control|)
 block|{
-name|crm
-operator|.
 name|addToCorruptReplicasMap
 argument_list|(
+name|crm
+argument_list|,
 name|getBlock
 argument_list|(
 name|block_id
 argument_list|)
 argument_list|,
 name|dn1
-argument_list|,
-literal|"TEST"
 argument_list|)
 expr_stmt|;
 block|}
@@ -725,6 +737,38 @@ argument_list|,
 literal|7L
 argument_list|)
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|addToCorruptReplicasMap (CorruptReplicasMap crm, Block blk, DatanodeDescriptor dn)
+specifier|private
+specifier|static
+name|void
+name|addToCorruptReplicasMap
+parameter_list|(
+name|CorruptReplicasMap
+name|crm
+parameter_list|,
+name|Block
+name|blk
+parameter_list|,
+name|DatanodeDescriptor
+name|dn
+parameter_list|)
+block|{
+name|crm
+operator|.
+name|addToCorruptReplicasMap
+argument_list|(
+name|blk
+argument_list|,
+name|dn
+argument_list|,
+literal|"TEST"
+argument_list|,
+name|Reason
+operator|.
+name|NONE
 argument_list|)
 expr_stmt|;
 block|}
